# DDE-Project

./: .gitmodules
Cube-Ikeda/: .gitignore  main.cpp  plot_traj.py  run.sh
Mackey-Glass/: CMakeLists.txt  main.cpp
Mackey-Glass/common/: CMakeLists.txt  draw.cpp  draw.hpp  mackeyGlass.cpp  mackeyGlass.hpp  sigintHandler.hpp
Mackey-Glass/simulations/: CMakeLists.txt  bifurcation.cpp  coveringRelation.cpp  newton.cpp  trajectory.cpp
